# cc-template

./: .pre-commit-config.yaml  404.html  README.md  example-input.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages.yml
_cc_shared/hooks/: post_gen_project.py
_scripts/: sync_shared.py
_shared/: cookiecutter.json
_shared/hooks/: post_gen_project.py
python/: cookiecutter.json
python/hooks/: post_gen_project.py
python/{{cookiecutter.project_slug}}/: LICENSE.txt
r/: LICENSE.txt  cookiecutter.json  hooks
r/hooks/: post_gen_project.py  pre_gen_project.py
search/: search_index.json
