[project]
name = "cookiecutter-templates"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.14"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-material-extensions = "^1.3.1"
mkdocs-get-deps = "^0.2.0"
pyyaml = "^6.0.2"
mkdocs = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

